-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.3.0
-
None
-
server: lustre-b2_2
client: master
-
3
-
4451
This issue was created by maloo for sarah <sarah@whamcloud.com>
This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/e20033fc-d075-11e1-9002-52540035b04c.
The sub-test lustre-initialization_1 failed with the following error:
Test system failed to start single suite, so abandoning all hope and giving up
This is the console log from client-1
16:26:00:LustreError: 4164:0:(mgc_request.c:1297:mgc_apply_recover_logs()) ASSERTION( entry->mne_length <= ((1UL) << 12) ) failed: 16:26:00:LustreError: 4164:0:(mgc_request.c:1297:mgc_apply_recover_logs()) LBUG 16:26:00:Pid: 4164, comm: mount.lustre 16:26:00: 16:26:00:Call Trace: 16:26:00: [<ffffffffa0428905>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] 16:26:00: [<ffffffffa0428f17>] lbug_with_loc+0x47/0xb0 [libcfs] 16:26:00: [<ffffffffa053e438>] mgc_apply_recover_logs+0x13e8/0x17e0 [mgc] 16:26:00: [<ffffffffa0780426>] ? __req_capsule_get+0x176/0x750 [ptlrpc] 16:26:00: [<ffffffffa0429bae>] ? cfs_free+0xe/0x10 [libcfs] 16:26:00: [<ffffffffa0757cc0>] ? lustre_swab_mgs_config_res+0x0/0x20 [ptlrpc] 16:26:01: [<ffffffffa05413b4>] mgc_process_log+0xe54/0x12f0 [mgc] 16:26:01: [<ffffffffa053a980>] ? mgc_blocking_ast+0x0/0x680 [mgc] 16:26:01: [<ffffffffa0732380>] ? ldlm_completion_ast+0x0/0x730 [ptlrpc] 16:26:01: [<ffffffffa0542d76>] mgc_process_config+0x5c6/0xee0 [mgc] 16:26:01: [<ffffffffa05e80ec>] lustre_process_log+0x25c/0xad0 [obdclass] 16:26:02: [<ffffffff8127f332>] ? __percpu_counter_init+0x62/0x70 16:26:02: [<ffffffffa0a897e0>] ll_fill_super+0xa70/0x1490 [lustre] 16:26:02: [<ffffffffa05f342d>] lustre_fill_super+0x11d/0xfd0 [obdclass] 16:26:02: [<ffffffffa05f3310>] ? lustre_fill_super+0x0/0xfd0 [obdclass] 16:26:02: [<ffffffff8117989f>] get_sb_nodev+0x5f/0xa0 16:26:02: [<ffffffffa05e2cf5>] lustre_get_sb+0x25/0x30 [obdclass] 16:26:02: [<ffffffff811794fb>] vfs_kern_mount+0x7b/0x1b0 16:26:02: [<ffffffff811796a2>] do_kern_mount+0x52/0x130 16:26:02: [<ffffffff81197ce2>] do_mount+0x2d2/0x8d0 16:26:02: [<ffffffff81198370>] sys_mount+0x90/0xe0 16:26:02: [<ffffffff8100b0f2>] system_call_fastpath+0x16/0x1b 16:26:02: 16:26:02:Kernel panic - not syncing: LBUG 16:26:02:Pid: 4164, comm: mount.lustre Not tainted 2.6.32-220.17.1.el6.x86_64 #1